# rust-comparedirs

./: Cargo.toml
src/: main.rs
testdir/A/: hej.txt  twoway.json
