[package]
name = "comparedirs"
version = "0.1.0"
authors = ["HEnquist <henrik.enquist@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
filetime = "0.2.5"
walkdir = "^2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"